# eduread-microservices

./: backgroud_tasks.py  database.db  error_handling.py  main.py  pyproject.toml
body/: body_multipleparams.py  body_nestedmodels.py  body_updates.py  bodyfields.py
cookies/: cookieparameter_models.py  cookieparameters.py
database/: jsoncompatible_encoder.py  sql_databases.py
dependencies/: class_dependencies.py  dependencies.py  pathoperation_dependencies.py  sub_dependencies.py  yield_dependencies.py
extras/: extradatatypes.py  extramodels.py
forms/: formdata.py  formmodels.py
headers/: headerparameters.py  headerparameters_models.py
path/: pathoperation_config.py  pathparameters_validation.py
query/: queryparameters_models.py  queryparameters_validation.py
requests/: requestbody.py  requestexampledata.py  requestfiles.py  requestformandfiles.py
response/: response_status_code.py  responsemodel_returntype.py
security/: cors.py  middleware.py  oauth2.py  oauth2_jwt.py
